--- a/js/pages/discover/member-center.html
+++ b/js/pages/discover/member-center.html
@@ -1,13 +1,14 @@
 <style>
     img {
         width: 95vw;
-        margin-top: 15px;
+        margin: 7px;
+
     }
     img:active {
         opacity: 0.5;
     }
 </style>
-<div style="display: flex;flex-direction: column;align-items: center;">
+<div style="display: flex;flex-direction: column;align-items: center;margin: 8px 0;">
     <img src="../img/discover/goIntroduce.png" onclick="javascript:location.href='card-introduce.html';"/>
     <img src="../img/discover/goCardPromotion.png" onclick="javascript:location.href='card-promotion.html';"/>
     <img src="../img/discover/goCardList.png" onclick="javascript:location.href='card-list.html';"/>
