隐藏午夜特价的广告栏，去掉个人中心弹窗的推广和抽奖，发现的推广先跳到推广申请页面

--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -49,7 +49,7 @@
 </section>
 
 <section>
-    <div class="row" onclick="javascript:location.href='promotion-detail.html';">
+    <div class="row" onclick="javascript:location.href='promotion-apply.html';">
         <img src="../img/discover/promotion.png" class="item-img">
         <div class="item-text">
             推广奖励计划
