--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -84,12 +84,12 @@
                     <div class="bs-text-smaller bs-text-black">体验基金</div>
                 </a>
             </div> -->
-            <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
+            <!-- <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/promotion.svg" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">推广</div>
                 </a>
-            </div>
+            </div> -->
             <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance&&!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/alliance.svg" class="grid-icon" />
@@ -106,22 +106,16 @@
                 <img src="../img/wallet.svg" class="grid-icon" />
                 <div class="bs-text-smaller bs-text-black">钱包</div>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(10)" ms-visible="!isManage">
+            <!-- <div class="center-nav-item" ms-on-tap="clickA(10)" ms-visible="!isManage">
                 <img src="../img/icon/gift.svg" class="grid-icon" />
                 <div class="bs-text-smaller bs-text-black">抽奖</div>
-            </div>
+            </div> -->
             <!-- <div class="center-nav-item" ms-visible="!isAdmin&&!isManage"> -->
             <!-- <a href="javascript:void(0)">
                     <img src="../img/icon/shopping.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">购物</div>
                 </a>-->
             <!-- </div>  -->
-            <!-- <div class="center-nav-item" ms-visible="isAdmin!=1&&!isManage">
-                <a href="javascript:void(0)" style="display: none;">
-                    <img src="../img/icon/switch.png" class="grid-icon" />
-                    <div class="bs-text-smaller bs-text-black">管理模式</div>
-                </a>
-            </div> -->
             <div class="center-nav-item" ms-on-tap="clickA(7)" ms-visible="isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/iconfont-jiudian.svg" class="grid-icon" />
