公益管理基金导航页对接API及增加交互

--- a/js/pages/cms/nav.html
+++ b/js/pages/cms/nav.html
@@ -35,14 +35,14 @@
                 <img class="intro-img-love" style="height: 24px; width: 24px;" ms-attr-src="data.img">
                 <span style="position: relative; top: -6px;"> {{data.name}}</span>
             </div>
-            <div class="bs-text-x-smaller detail-foundation" >
+            <div class="bs-text-x-smaller detail-foundation" style="min-height: 100px;" >
                 {{data.des}}
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div style="width: 100px">
+    <div class="row" ms-click="goDonation">
+        <div style="width: 100px;">
             捐款总金额
         </div>
         <div class="item-text">
@@ -51,8 +51,8 @@
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
 
-    <div class="row">
-        <div style="width: 100px">
+    <div class="row" ms-click="goAccount">
+        <div style="width: 100px;">
             账户余额
         </div>
         <div class="item-text">
@@ -61,8 +61,8 @@
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
 
-    <div class="row">
-        <div style="width: 100px">
+    <div class="row" ms-click="goFavoreeList">
+        <div style="width: 100px;">
             受益学生
         </div>
         <div class="item-text">
@@ -71,8 +71,8 @@
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
 
-    <div class="row">
-        <div style="width: 100px">
+    <div class="row"  ms-click="goSubList">
+        <div style="width: 100px;">
             子账户
         </div>
         <div class="item-text">
