--- a/js/pages/cms/subList.html
+++ b/js/pages/cms/subList.html
@@ -40,7 +40,7 @@
             <td>{{el.id}}</td>
             <td>{{el.tel}}</td>
             <td>{{el.name}}</td>
-            <td><button class="mui-btn mui-btn-danger bs-text-smaller" style="line-height: 10px;">删除</button></td>
+            <td><button class="mui-btn mui-btn-danger bs-text-smaller bs-bg-black" style="border: none;line-height: 10px;">删除</button></td>
         </tr>
     </table>
 </section>
