--- a/js/pages/cms/nav.html
+++ b/js/pages/cms/nav.html
@@ -66,7 +66,7 @@
             受益学生
         </div>
         <div class="item-text">
-            <span class="bs-text-red">{{data.number}}</span> 个
+            <span class="bs-text-red">{{data.numberStudent}}</span> 个
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
@@ -76,7 +76,7 @@
             子账户
         </div>
         <div class="item-text">
-            <span class="bs-text-red">{{data.child}}</span> 个
+            <span class="bs-text-red">{{data.numberSub}}</span> 个
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
