公益管理学生列表、子账户列表对接API

--- a/js/pages/card/log.html
+++ b/js/pages/card/log.html
@@ -45,6 +45,6 @@
     </div>
     <div class="bs-text-gold bs-text-smaller" style="width: 100%;text-align: center;margin-left: -20px;padding: 10px;position: fixed;bottom: 0;background: #fff;z-index:99">
         <div>客服电话: {{SERVICECALL}}</div>
-        <button onclick="javascript:location.href='commonweal-introduce.html'" style="background-color: black;color: white;z-index: 11;width: 100%;display: none;">公益捐赠</button>
+        <button onclick="javascript:location.href='commonweal-introduce.html'" style="background-color: black;color: white;z-index: 11;width: 100%;">公益捐赠</button>
     </div>
 </article>
