--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -5,7 +5,7 @@
     .row {
         display: flex;
         justify-content: space-between;
-        padding: 9px 13px;
+        padding: 15px;
         background-color: #fff;
         font-size: 15px;
         border-bottom: 1px solid #ddd;
