--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -1,6 +1,6 @@
 <div id="popModule" style="display: none;" class="hide" ms-controller="aside">
     <div class="content">
-        <div class="mui-text-center bs-bg-white" style="padding-top: 20px;">
+        <div class="mui-text-center bs-bg-white" style="padding-top: 20px;border-bottom: 1px solid #ddd;">
             <div class="circle" style="width: 104px;height: 104px;margin: 0px auto;border: 1px solid #baa074;">
                 <div class="circle" style="margin: 0 auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;" ms-css-background-image='url({{headImg}})' ms-on-tap="changeImg">
                     <img src="../img/edit-small.png" style="position: absolute;background: #fff;border-radius: 50%;bottom: 2px;left: 72px;width: 18px;" />
@@ -13,7 +13,7 @@
             </div>
             <div class="bs-text-smaller bs-text-gold" style="padding: 5px;" ms-if="!cardList[0].id" ms-on-tap="goCard(0, 0)">升级VIP会员</div>
         </div>
-        <div class="control bs-bg-black bs-text-white">
+        <div class="control bs-bg-black bs-text-white" ms-if="!isCMS && !isManage">
             <div class="control-item" ms-click="open">
                 <img src="../img/icon/open.png" />
                 <div class="grid-text bs-text-small">开门</div>
@@ -60,13 +60,13 @@
             </ul>
         </div>
         <div class="bs-bg-white" style="display: flex;flex-flow: row wrap;align-content: flex-start;">
-            <div class="center-nav-item" ms-on-tap="clickA(3)" ms-visible="!isManage">
+            <div class="center-nav-item" ms-on-tap="clickA(3)" ms-visible="!isManage&&!isCMS">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/service.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">服务</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(2)" ms-visible="!isManage">
+            <div class="center-nav-item" ms-on-tap="clickA(2)" ms-visible="!isManage&&!isCMS">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/order.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">订单</div>
@@ -77,6 +77,10 @@
                     <img src="../img/icon/info.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">个人信息</div>
                 </a>
+            </div>
+            <div class="center-nav-item" ms-on-tap="clickA(9)" ms-visible="!isManage&&!isCMS">
+                <img src="../img/wallet.svg" class="grid-icon" />
+                <div class="bs-text-smaller bs-text-black">钱包</div>
             </div>
             <!-- <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
@@ -90,21 +94,21 @@
                     <div class="bs-text-smaller bs-text-black">推广</div>
                 </a>
             </div> -->
-            <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance&&!isManage">
+            <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance&&!isManage&&!isCMS">
                 <a href="javascript:void(0)">
                     <img src="../img/alliance.svg" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">鸿鹄伙伴</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(5)" ms-visible="isAdmin&&!isManage">
+            <div class="center-nav-item" ms-on-tap="clickA(5)" ms-visible="isAdmin&&!isManage&&!isCMS">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/switch.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">管理模式</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(9)" ms-visible="!isManage">
-                <img src="../img/wallet.svg" class="grid-icon" />
-                <div class="bs-text-smaller bs-text-black">钱包</div>
+            <div class="center-nav-item" ms-on-tap="clickA(10)" ms-visible="isFoundation&&!isCMS&&!isManage">
+                <img src="../img/commonweal/love.png" class="grid-icon" />
+                <div class="bs-text-smaller bs-text-black">公益管理</div>
             </div>
             <!-- <div class="center-nav-item" ms-on-tap="clickA(10)" ms-visible="!isManage">
                 <img src="../img/icon/gift.svg" class="grid-icon" />
@@ -122,7 +126,7 @@
                     <div class="bs-text-smaller bs-text-black">更多酒店</div>
                 </a>
             </div>
-            <div class="center-nav-item" ms-on-tap="clickA(6)" ms-visible="isManage">
+            <div class="center-nav-item" ms-on-tap="clickA(6)" ms-visible="isManage||isCMS">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/switch.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">下单模式</div>
