--- a/js/pages/cms/favoree.html
+++ b/js/pages/cms/favoree.html
@@ -3,6 +3,26 @@
     display: flex;
     justify-content: center;
 }
+
+.left {
+    width: 20vw;
+}
+
+.choose {
+    width: 43vw; 
+    height: 30px; 
+    padding: 3px; 
+    line-height: 24px; 
+    border-radius: 8px;
+}
+
+.choose img {
+    margin-top: 5px;
+    height: 20px;
+    position: relative;
+    top: -3px;
+    right: -4vw;
+}
 </style>
 <div class="bs-text-smaller cms" ms-controller="favoree">
     <div class="mui-text-center" style="margin-top: 10vh;">
@@ -13,30 +33,27 @@
         </div>
     </div>
     <div class="user" style="margin-top: 5vh;">
-        <div style="margin-right: 5vw;">姓名</div>
+        <div class="left">姓名</div>
         <div>
-            <input type="text" ms-duplex="data.name" data-duplex-changed="changed" style="width: 43vw; height: 30px; padding: 8px; border-radius: 8px; text-align: center;" />
+            <input type="text" ms-duplex="data.name" style="width: 43vw; height: 30px; padding: 8px; border-radius: 8px; text-align: center;" />
         </div>
     </div>
     <div class="user">
-        <div style="margin-right: 5vw;">学历</div>
+        <div class="left">学历</div>
         <div>
             <div>
-                <button id='edu1' style="width: 43vw; height: 30px; padding: 3px; line-height: 24px border-radius: 8px;">{{data.edu1}}</button><img src="../img/icon/right-arrow.svg" style="margin-top: 5px; height: 20px;">
-            </div>
-            <div style="margin-top: 2vh;">
-                <button id='edu2' style="width: 43vw; height: 30px; padding: 3px; line-height: 24px border-radius: 8px;">{{data.edu2}}</button><img src="../img/icon/right-arrow.svg" style="margin-top: 5px; height: 20px;">
+                <button id='edu1' class="choose"><div style="display: inline-block; position: relative; top: -8px; width: 100px;">{{edu1}}</div><img src="../img/icon/right-arrow.svg"></button>
             </div>
         </div>
     </div>
     <div class="user" style="margin-top: 2vh;">
-        <div style="margin-right: 5vw; padding-top: 5px;">原因</div>
+        <div class="left" style="padding-top: 5px;">原因</div>
         <div>
             <textarea ms-duplex="data.reason" style="height: 26vh; width: 43vw; padding: 5px; border-radius: 8px; text-align: left; text-indent: 1em; font-size: 12px;" placeholder="资助原因">
             </textarea>
         </div>
     </div>
     <div style="position: absolute; bottom: 0;">
-        <button style="width: 100vw; height: 50px;" ms-click="save()" ms-attr-disabled="isDisabled">保存</button>
+        <button style="width: 100vw; height: 50px;" ms-click="save()">保存</button>
     </div>
 </div>
