前端改下动态基金，管理首页点击图片到编辑页

--- a/js/pages/cms/nav.html
+++ b/js/pages/cms/nav.html
@@ -29,10 +29,10 @@
 
 
 <section ms-controller="foundation">
-    <div class="detail-back1">
+    <div class="detail-back1" onclick="javascript: location.href='editFund.html'">
         <div class="detail-title bs-text-small">
             <div class="bs-text-normal" style="margin-top: ">
-                <img class="intro-img-love" style="height: 24px; width: 24px;" ms-attr-src="data.img">
+                <img class="intro-img-love" style="height: 24px; width: 24px; border-radius: 50%;" ms-attr-src="data.img">
                 <span style="position: relative; top: -6px;"> {{data.name}}</span>
             </div>
             <div class="bs-text-x-smaller detail-foundation" style="min-height: 100px;" >
