捐赠弹窗更改宽度

--- a/js/pages/commonweal/commonweal-pop.html
+++ b/js/pages/commonweal/commonweal-pop.html
@@ -1,11 +1,11 @@
 <style>
     .button {
-        width: 50vw; 
+        width: 40vw; 
         height: 50px; 
         border-color: #ddd;
     }
 </style>
-<div ms-controller="detailPop">
+<div ms-controller="detailPop" style="width: 80vw;">
     <div class="bs-text-smaller" style="text-align: center; padding: 22px 5vw 0;">
         <div>帮助他人改变命运</div>
         <div style="margin: 14px 0 22px;">你有权让自己独一无二</div>
