公益前端页面接口修正，后台编辑页面样式修改

--- a/js/pages/commonweal/detail.html
+++ b/js/pages/commonweal/detail.html
@@ -56,7 +56,7 @@
             <br>
         </div>
     </div>
-    <div :if="@amount!=''">
+    <div :if="!@join">
         <button class="detail-button" :click="@openPop()">确认捐赠</button>
     </div>
     <!-- modal -->
