--- a/js/pages/commonweal/intro.html
+++ b/js/pages/commonweal/intro.html
@@ -11,32 +11,34 @@
                 本宿公益资助计划，邀您携手参与！
             </div>
         </div>
-        <div style="position: relative; top: -190px; text-align: center;">
+        <div style="position: relative; top: -180px; text-align: center;">
             <img :attr="{src: @userImg}" style="border-radius: 50%; height: 45px;">
         </div>
     </div>
     <div class="intro-content">
-        <div :for="el in @data" :click="@goDetail(el.id)" style="margin-bottom: 30px;">
-            <div class="intro-text-red bs-text-smaller" style="margin: 10px 0 0;">
+        <div :for="el in @data" :on-tap="@goDetail(el.id)" style="margin-bottom: 30px;">
+            <div class="intro-text-red bs-text-smaller" :on-tap="@goDetail(el.id)" style="margin: 10px 0 0;">
                 <img class="intro-img-love" :attr="{src: 'http://img.bensue.com/' + el.logoUrl}">
                 <span style="position: relative; top: -3px; margin-left: 5px;"> {{el.cnName}}</span>
-                <div class="bs-text-x-smaller">{{el.enName}}</div>
+                <div class="bs-text-x-smaller" :on-tap="@goDetail(el.id)">{{el.enName}}</div>
             </div>
-            <div class="bs-text-smaller">
-                <div>{{el.brief}}</div>
-                <div class="bs-text-x-smaller">已资助<span class="intro-text-red"> {{el.studentCount}} </span>位学生完成学业</div>
+            <div class="bs-text-smaller" :on-tap="@goDetail(el.id)">
+                <div :on-tap="@goDetail(el.id)">{{el.brief}}</div>
+                <div class="bs-text-x-smaller" :on-tap="@goDetail(el.id)">已资助<span class="intro-text-red"> {{el.studentCount}} </span>位学生完成学业</div>
             </div>
         </div>
         <div style="margin: 5vh 30px 3vh 30px;">
-            <button class="intro-button bs-text-larger" :click="@open">马上捐赠</button>
+            <button class="intro-button bs-text-larger" :on-tap="@open">马上捐赠</button>
         </div>
         <div class="bs-text-x-smaller bs-text-102">
             以您个人名义，将推广奖励收入的15%捐赠
             <br> 给指定的公益组织
         </div>
-        <div class="bs-text-smaller bs-text-gold" style="position: relative; bottom: -5vh;" :click="@goRecord()">
+        <div class="bs-text-smaller bs-text-gold" style="position: relative; bottom: -5vh;" :on-tap="@goRecord()">
             我的公益记录
         </div>
+        <br>
+        <br>
     </div>
     <div class="intro-footer bs-text-smaller bs-text-gold">
         <img class="intro-img-love" src="img/commonweal/commonweal.png">
