增加合作加盟静态轮播页面 关于本宿的图片替换

--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -39,7 +39,7 @@
 </section>
 
 <section>
-    <div class="row">
+    <div class="row" onclick="javascript:location.href='commonweal-introduce.html';">
         <img src="../img/discover/commonweal.png" class="item-img">
         <div class="item-text">
             本宿公益
@@ -66,7 +66,7 @@
 </section>
 
 <section>
-    <div class="row">
+    <div class="row" onclick="javascript:location.href='alliance-intro.html';">
         <img src="../img/discover/alliance.png" class="item-img" style="height: 16px;margin-top: 3px;margin-bottom: 3px;">
         <div class="item-text">
             合作加盟
