--- a/js/pages/about.html
+++ b/js/pages/about.html
@@ -32,15 +32,11 @@ body {
 <!-- Swiper -->
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background-image:url(img/about_01.png)">
+        <div class="swiper-slide" style="background-image:url(img/about_1.jpg)">
         </div>
-        <div class="swiper-slide" style="background-image:url(img/about_02.png)">
+        <div class="swiper-slide" style="background-image:url(img/about_2.jpg)">
         </div>
-        <div class="swiper-slide" style="background-image:url(img/about_03.png)">
-        </div>
-        <div class="swiper-slide" style="background-image:url(img/about_04.png)">
-        </div>
-        <div class="swiper-slide" style="background-image:url(img/about_05.png)">
+        <div class="swiper-slide" style="background-image:url(img/about_3.jpg)">
         </div>
     </div>
     <!-- Add Pagination -->
