公益管理更改头像的默认显示

--- a/js/pages/user/avatar.html
+++ b/js/pages/user/avatar.html
@@ -69,7 +69,7 @@ body {
 <div class="avatar bs-bg-black" ms-controller='avatar'>
     <!-- Current avatar -->
     <div class="avatar-view" ms-if="!isEdit">
-        <img ms-attr-src="urlAPINet + headImg" alt="Avatar">
+        <img ms-attr-src="headImg" style="background-color: white;" alt="Avatar">
 
         <button type="button" class="bs-text-small bs-text-white bs-bg-black" ms-click="pickImg">更改头像</button>
     </div>
