--- a/js/pages/commonweal/detail.html
+++ b/js/pages/commonweal/detail.html
@@ -1,5 +1,5 @@
 <div ms-controller="detail" class="ms-controller">
-    <div class="detail-back1" style="height: 30vh;">
+    <div class="detail-back1" style="height: 180px;">
         <div class="detail-title bs-text-small">
             <div class="bs-text-normal" style="margin-top: ">
                 <img class="intro-img-love" style="height: 24px; width: 24px; border-radius: 50%; margin-right: 2vw;" :attr="{src: 'http://img.bensue.com/' + @data.logoUrl}">
@@ -10,7 +10,7 @@
             </div>
         </div>
     </div>
-    <div style="margin-top: 20px; text-align: center;">
+    <div style="margin-top: 10px; text-align: center;">
         <div class="detail-left-tab bs-text-normal" :on-tap="@getButton(1)">
             <span class="bs-text-smaller detail-left-up" :on-tap="@getButton(1)">已资助</span>
             <br>
@@ -22,7 +22,7 @@
             <span class="intro-text-red" :on-tap="@getButton(2)">{{@moneySum}}</span>元善款
         </div>
     </div>
-    <div id="pullrefresh" class="mui-scroll-wrapper bs-text-smaller" style="top: 270px; background-color: white;">
+    <div id="pullrefresh" class="mui-scroll-wrapper bs-text-smaller" style="top: 260px; background-color: white;">
         <div class="mui-scroll">
             <div :if="@listType==1">
                 <div class="detail-left-list" :for="el in @list1">
