简介、介绍更换

--- a/js/pages/cms/nav.html
+++ b/js/pages/cms/nav.html
@@ -40,9 +40,9 @@
                 <img style="height: 18px; width: 18px;position: relative;left: 10px;top: -2px;" src="../img/icon/edit_white_red.png">
             </div>
             <div class="bs-text-x-smaller">{{data.enName}}</div>
-            <div class="bs-text-bolder bs-text-x-smaller">{{data.brief}}</div>
+            <div class="bs-text-bolder bs-text-x-smaller">{{data.introduction}}</div>
             <div class="bs-text-x-smaller detail-foundation">
-                {{data.introduction}}
+                {{data.brief}}
             </div>
         </div>
     </div>
