--- a/js/pages/commonweal/intro.html
+++ b/js/pages/commonweal/intro.html
@@ -23,7 +23,7 @@
                 <div class="bs-text-x-smaller" :on-tap="@goDetail(el.id)">{{el.enName}}</div>
             </div>
             <div class="bs-text-smaller" :on-tap="@goDetail(el.id)">
-                <div :on-tap="@goDetail(el.id)">{{el.brief}}</div>
+                <div :on-tap="@goDetail(el.id)">{{el.introduction}}</div>
                 <div class="bs-text-x-smaller" :on-tap="@goDetail(el.id)">已资助<span class="intro-text-red"> {{el.studentCount}} </span>位学生完成学业</div>
             </div>
         </div>
