登录注册输入验证码时，增加隐藏软键盘的功能

--- a/js/pages/register/keyboard.html
+++ b/js/pages/register/keyboard.html
@@ -1,5 +1,5 @@
 <div class="keyboard" id="keyboard">
-    <button key="1">1</button><button key="2">2</button><button key="3">3</button><button key="4">4</button><button key="5">5</button><button key="6">6</button><b>&nbsp;</b><button key="7">7</button><button key="8">8</button><button key="9">9</button><i>&nbsp;</i><button key="0">0</button><button class="gainsboro" key="bk"><img src="img/iconfont-tuige.svg" width="24px" height="24px"></button>
+    <button key="1">1</button><button key="2">2</button><button key="3">3</button><button key="4">4</button><button key="5">5</button><button key="6">6</button><b>&nbsp;</b><button key="7">7</button><button key="8">8</button><button key="9">9</button><i><img src="img/icon/right-arrow.svg" width="24px" height="24px" style="transform: rotate(90deg);-ms-transform: rotate(90deg);-moz-transform: rotate(90deg);" onclick="hidekeyboard()"></i><button key="0">0</button><button class="gainsboro" key="bk"><img src="img/iconfont-tuige.svg" width="24px" height="24px"></button>
     <script>
         var keystr = '';
         mui('.keyboard').on('tap', 'button', function() {
