增加加入我们页面

--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -73,7 +73,7 @@
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
-    <div class="row">
+    <div class="row" onclick="javascript:location.href='joinUs.html';">
         <img src="../img/discover/joinUs.png" class="item-img" style="height: 16px;margin-top: 3px;margin-bottom: 3px;">
         <div class="item-text">
             加入我们
